--- a/backend/movies/.gitignore
+++ b/backend/movies/.gitignore
@@ -14,7 +14,6 @@ target/
 .sts4-cache
 
 ### IntelliJ IDEA ###
-.env
 .idea
 *.iws
 *.iml
@@ -32,3 +31,6 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# ENV FILES
+.env
